css/style.css
/* Reset */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Colors*/
:root {
    --footer: #23272a ;
    --gray:#e5e5e5;
}

/* Generics */
body{
    font-family: Whitney, 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.section-title{
    font-size: 40px;
    margin-bottom: 20px;
}

.section-text{
    padding: 0;
}

/* Waves */
.wave{
    background-image: url('../img/wave.svg');
    height: 100px;
    display: block;
    opacity: 0.1;
}
.upside-down{
    rotate: 0.5turn;
}



/*Navbar */

header{
    background-color: var(--Header-background);
    height: 650px;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-image:url(../img/jumbo.png);
    background-size: cover;
    flex-wrap: wrap;
}

#navigation-menu {
    height: 50px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    width: 1000px ;
    margin-top: 10px;
    
}
.logo{
    
    width: 200px;
    padding:  10px 10px;
    height: 50px;
}
.link{
    width: 600px;
    padding:  10px 10px;
    text-align: center;
    color: white;
    display: flex;
    flex-direction: row;
}
.header-list {
    list-style-type: none;
}
.header-element{
    display: inline-block;
}
a{
    color: white;
    text-decoration: none;
    padding: 10px;
}
.login{
    width: 200px;
    padding:  10px 10px;
    text-align: right;
}
button{
    border-radius: 20px;
    padding: 10px;
    width: 80px;
    border: none;
}



/*Navbar content*/


.nav-content{
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;
    color: white;
    height: 400px;
    width: 700px;
}
p{
    padding: 30px;
    line-height: 30px;
}
.buttons-nav{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}
.buttons-download{
    width: 200px;
    height: 50px;
    padding: 10px;
    margin-left: 20px;
}
.button-black{
    background-color: black;
    color: white;
    width: 300px;
}



/* Section1 and Section3 */

.section1 , .section3{
    display: flex;
    justify-content: center;
    height: 500px;
    align-items: center;
}

.section1-img, .section3-img{
    height: 400px;
    display: flex;
    padding: 0 10px;
}

.section1-content, .section3-content{
    display: flex;
    flex-direction: column;
    width: 300px;
    height: 400px;
    margin-top: 30px;
}


/* Section2 */

.section2{
    display: flex;
    justify-content: center;
    height: 500px;
    align-items: center;
    background-color: var(--gray);
}

.section2-img{
    height: 400px;
    display: flex;
    padding: 0px 10px;
}

.section2-content{
    display: flex;
    flex-direction: column;
    width: 400px;
    height: 400px;
    margin-top: 0px;
    padding: 20px;
}



/* Section4 */

.section4{
    display: flex;
    align-items: center;
    flex-direction: column;
    height: 1000px;
    background-color: var(--gray);
}
.section4-img{
    height: 500px;
    margin-bottom: 40px;
}

.section4-content{
    display: flex;
    align-items: center;
    flex-direction: column;
    width: 800px;
    height: 150px;
    margin-top: 30px;
}
.section-title-bottom{
    font-size: 35px;
    margin-bottom: 20px;
}

.bottom-download{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    padding: 20px;
    margin-bottom: 30px;
    height: 200px;
}

.button-pink{
    background-color: #8fa1e1;
    color: white;
    width: 200px;
    height: 50px;
    border-radius: 20px;
    padding: 10px;
    margin-top: 20px;
}
.stars{
    background-image: url(../img/stars.svg);
    height: 50px;
    display: block;
}


/* Foooter */

footer{
    background-color: var(--footer);
    height: 0 auto;
}
.main-content-footer{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 20px 20px;
}
.footer-med-content{
    height: 350px;
    width: 300px;
}

.footer-title-med {
    color: #8fa1e1;
    font-size: 30px;
    padding: 20px 0px;
}

.footer-title{
    color: #8fa1e1;
}
.language{
    color: white;
    display: flex;
    flex-direction: row;
    align-items: center;
    height: 50px;
}
h4{
    padding: 10px;
}

.socials{
    color: white;
    margin-top: 20px;
}
i{
    padding: 10px;
}

.footer-small-content{
    height: 350px;
    width: 150px;
    color: white;
    padding: 10px;
}

ul{
    list-style-type: none;
}

li{
    padding: 5px;
}

.line-footer{
    background-color: #8fa1e1;
    height: 2px;
    width: 1000px;
    margin: 0 auto;
}

.last-content-footer{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 10px 10px;
}

.content{
    width: 1000px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 100px;
}
.logo-footer{
    width: 100px;
    height: 30px;
    padding: 0 10px;
}
.button-pink-footer{
    width: 100px;
    height: 30px;
    padding: 0 10px;
    background-color: #8fa1e1;
    color: white;
}

